--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <script>
         // Папка, где хранятся PDF файлы
-        const folderPath = "/Для сайта/";
+        const folderPath = /Для сайта/;
 
         // Родительский элемент, куда будут добавляться ссылки
         const pdfList = document.getElementById("pdfList");
